files/products/appscode/aws-marketplace/ace_payg_cf_amd64.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template for AppsCode Cloud (ACE)

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      -
        Label:
          default: "Amazon EC2 Configuration"
        Parameters:
          - InstanceType
          - ApplicationAccessIpCIDR
          - SSHIpCIDR
          - KeyPair
      -
        Label:
          default: "Application Configuration"
        Parameters:
          - DomainWhiteList

Parameters:
  InstanceType:
    Description: "Choose your EC2 instance type to be deployed."
    Type: String
    Default: "m5.xlarge"
    AllowedValues:
      - "m5.xlarge"
      - "m5.2xlarge"
      - "m5.4xlarge"
      - "m5.8xlarge"
      - "m5.12xlarge"
      - "m5.16xlarge"
      - "m5.24xlarge"
      - "m5d.xlarge"
      - "m5d.2xlarge"
      - "m5d.4xlarge"
      - "m5d.8xlarge"
      - "m5d.12xlarge"
      - "m5d.16xlarge"
      - "m5d.24xlarge"
  SSHIpCIDR:
    Description: "CIDR range of remote ip for ssh for debug or management purposes. Please set CIDR to x.x.x.x/32 to allow one specific IP address access, 0.0.0.0/0 to allow all IP addresses access, or another CIDR range."
    Type: String
    AllowedPattern: '^((25[0-5]|2[0-4][0-9]|1[0-9]{2}|[1-9]?[0-9])\.){3}(25[0-5]|2[0-4][0-9]|1[0-9]{2}|[1-9]?[0-9])\/(3[0-2]|[1-2]?[0-9])$'
  ApplicationAccessIpCIDR:
    Description: "CIDR range from where the application will be accessed. 0.0.0.0/0 is recommended to allow all IP addresses access. Set CIDR to x.x.x.x/32 to allow one specific IP address access."
    Type: String
    AllowedPattern: '^((25[0-5]|2[0-4][0-9]|1[0-9]{2}|[1-9]?[0-9])\.){3}(25[0-5]|2[0-4][0-9]|1[0-9]{2}|[1-9]?[0-9])\/(3[0-2]|[1-2]?[0-9])$'
  KeyPair:
    Description: "Name of an existing EC2 KeyPair to enable SSH access to the instance."
    Type: 'AWS::EC2::KeyPair::KeyName'
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64'  
  DomainWhiteList:
    Description: "Provide a valid and existing domain with an MX record for domain whitelisting. This domain will be used to validate users' email addresses during signup. For example: gmail.com, appscode.com etc."
    Type: String
    AllowedPattern: '^(?!:\/\/)([a-zA-Z0-9-]{1,63}\.)+[a-zA-Z]{2,63}$'

# Mappings:
#   InstanceMap:
#     af-south-1:
#       AMI: ami-02698500b0725a8f3
#     ap-east-1:
#       AMI: ami-0db309d325cb5e640
#     ap-northeast-1:
#       AMI: ami-0265dc69e8de144d3
#     ap-northeast-2:
#       AMI: ami-061fdbe1769e05459
#     ap-northeast-3:
#       AMI: ami-051ec687ccec0d381
#     ap-south-1:
#       AMI: ami-03edbe403ec8522ed
#     ap-south-2:
#       AMI: ami-0f48205ec8e2235e8
#     ap-southeast-1:
#       AMI: ami-00dc6910e7d33c5f8
#     ap-southeast-2:
#       AMI: ami-02b231863b9573c37
#     ap-southeast-3:
#       AMI: ami-05fb6555a25318aba
#     ap-southeast-4:
#       AMI: ami-032a351da1f26fbb2
#     ap-southeast-5:
#       AMI: ami-07edb670a221b50d1
#     ca-central-1:
#       AMI: ami-01eb85f71f0b45be6
#     ca-west-1:
#       AMI: ami-0f484dd94433f4908
#     eu-central-1:
#       AMI: ami-06d4d7b82ed5acff1
#     eu-central-2:
#       AMI: ami-0a29285b9198efb93
#     eu-north-1:
#       AMI: ami-03328aeec917a844b
#     eu-south-1:
#       AMI: ami-09c2055f9ded02869
#     eu-south-2:
#       AMI: ami-0f5dc5dfd3680af1a
#     eu-west-1:
#       AMI: ami-09c39a45aca52b2d6
#     eu-west-2:
#       AMI: ami-0c2dcd6caa6a07643
#     eu-west-3:
#       AMI: ami-0f637d6de571fb4dd
#     il-central-1:
#       AMI: ami-0d7d24b1d0bec0982
#     me-central-1:
#       AMI: ami-077e1619b58cf8bb6
#     me-south-1:
#       AMI: ami-07914deb7dde5b7df
#     sa-east-1:
#       AMI: ami-05dbef44625409d15
#     us-east-1:
#       AMI: ami-085386e29e44dacd7
#     us-east-2:
#       AMI: ami-096af71d77183c8f8
#     us-west-1:
#       AMI: ami-06fe18c7144382cfb
#     us-west-2:
#       AMI: ami-0ab69690991408217
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.5.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref AWS::StackName
  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.5.0.0/24
      AvailabilityZone: {
        "Fn::Select" : [
          0,
          {
            "Fn::GetAZs" : !Ref AWS::Region
          }
        ]
      }
      Tags:
        - Key: Name
          Value: !Ref AWS::StackName
  ElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Tags:
        - Key: Name
          Value: !Ref AWS::StackName
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref AWS::StackName
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref AWS::StackName
  RouteToInternet:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  SecurityGroupIngress4222:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 4222
      ToPort: 4222
      CidrIp: !Ref ApplicationAccessIpCIDR
      GroupId: !GetAtt VPC.DefaultSecurityGroup
  SecurityGroupIngress80:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      CidrIp: !Ref ApplicationAccessIpCIDR
      GroupId: !GetAtt VPC.DefaultSecurityGroup
  SecurityGroupIngress443:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: !Ref ApplicationAccessIpCIDR
      GroupId: !GetAtt VPC.DefaultSecurityGroup
  SecurityGroupIngress6443:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 6443
      ToPort: 6443
      CidrIp: !Ref ApplicationAccessIpCIDR
      GroupId: !GetAtt VPC.DefaultSecurityGroup
  SecurityGroupIngress22:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: !Ref SSHIpCIDR
      GroupId: !GetAtt VPC.DefaultSecurityGroup
  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref Subnet
  InstanceProfileRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      Policies:
        - PolicyName: !Ref AWS::StackName
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow # basic
                Action:
                  - 'ec2:DescribeIpamPools'
                  - 'ec2:AllocateIpamPoolCidr'
                  - 'ec2:AttachNetworkInterface'
                  - 'ec2:DetachNetworkInterface'
                  - 'ec2:AllocateAddress'
                  - 'ec2:AssignIpv6Addresses'
                  - 'ec2:AssignPrivateIpAddresses'
                  - 'ec2:UnassignPrivateIpAddresses'
                  - 'ec2:AssociateRouteTable'
                  - 'ec2:AssociateVpcCidrBlock'
                  - 'ec2:AttachInternetGateway'
                  - 'ec2:AuthorizeSecurityGroupIngress'
                  - 'ec2:CreateCarrierGateway'
                  - 'ec2:CreateInternetGateway'
                  - 'ec2:CreateEgressOnlyInternetGateway'
                  - 'ec2:CreateNatGateway'
                  - 'ec2:CreateNetworkInterface'
                  - 'ec2:CreateRoute'
                  - 'ec2:CreateRouteTable'
                  - 'ec2:CreateSecurityGroup'
                  - 'ec2:CreateSubnet'
                  - 'ec2:CreateTags'
                  - 'ec2:CreateVpc'
                  - 'ec2:CreateVpcEndpoint'
                  - 'ec2:DisassociateVpcCidrBlock'
                  - 'ec2:ModifyVpcAttribute'
                  - 'ec2:ModifyVpcEndpoint'
                  - 'ec2:DeleteCarrierGateway'
                  - 'ec2:DeleteInternetGateway'
                  - 'ec2:DeleteEgressOnlyInternetGateway'
                  - 'ec2:DeleteNatGateway'
                  - 'ec2:DeleteRouteTable'
                  - 'ec2:ReplaceRoute'
                  - 'ec2:DeleteSecurityGroup'
                  - 'ec2:DeleteSubnet'
                  - 'ec2:DeleteTags'
                  - 'ec2:DeleteVpc'
                  - 'ec2:DeleteVpcEndpoints'
                  - 'ec2:DescribeAccountAttributes'
                  - 'ec2:DescribeAddresses'
                  - 'ec2:DescribeAvailabilityZones'
                  - 'ec2:DescribeCarrierGateways'
                  - 'ec2:DescribeInstances'
                  - 'ec2:DescribeInstanceTypes'
                  - 'ec2:DescribeInternetGateways'
                  - 'ec2:DescribeEgressOnlyInternetGateways'
                  - 'ec2:DescribeInstanceTypes'
                  - 'ec2:DescribeImages'
                  - 'ec2:DescribeNatGateways'
                  - 'ec2:DescribeNetworkInterfaces'
                  - 'ec2:DescribeNetworkInterfaceAttribute'
                  - 'ec2:DescribeRouteTables'
                  - 'ec2:DescribeSecurityGroups'
                  - 'ec2:DescribeSubnets'
                  - 'ec2:DescribeVpcs'
                  - 'ec2:DescribeDhcpOptions'
                  - 'ec2:DescribeVpcAttribute'
                  - 'ec2:DescribeVpcEndpoints'
                  - 'ec2:DescribeVolumes'
                  - 'ec2:DescribeTags'
                  - 'ec2:DetachInternetGateway'
                  - 'ec2:DisassociateRouteTable'
                  - 'ec2:DisassociateAddress'
                  - 'ec2:ModifyInstanceAttribute'
                  - 'ec2:ModifyNetworkInterfaceAttribute'
                  - 'ec2:ModifySubnetAttribute'
                  - 'ec2:ReleaseAddress'
                  - 'ec2:RevokeSecurityGroupIngress'
                  - 'ec2:RunInstances'
                  - 'tag:GetResources'
                  - 'elasticloadbalancing:AddTags'
                  - 'elasticloadbalancing:CreateLoadBalancer'
                  - 'elasticloadbalancing:ConfigureHealthCheck'
                  - 'elasticloadbalancing:DeleteLoadBalancer'
                  - 'elasticloadbalancing:DeleteTargetGroup'
                  - 'elasticloadbalancing:DescribeLoadBalancers'
                  - 'elasticloadbalancing:DescribeLoadBalancerAttributes'
                  - 'elasticloadbalancing:DescribeTargetGroups'
                  - 'elasticloadbalancing:ApplySecurityGroupsToLoadBalancer'
                  - 'elasticloadbalancing:SetSecurityGroups'
                  - 'elasticloadbalancing:DescribeTags'
                  - 'elasticloadbalancing:ModifyLoadBalancerAttributes'
                  - 'elasticloadbalancing:RegisterInstancesWithLoadBalancer'
                  - 'elasticloadbalancing:DeregisterInstancesFromLoadBalancer'
                  - 'elasticloadbalancing:RemoveTags'
                  - 'elasticloadbalancing:SetSubnets'
                  - 'elasticloadbalancing:ModifyTargetGroupAttributes'
                  - 'elasticloadbalancing:CreateTargetGroup'
                  - 'elasticloadbalancing:DescribeListeners'
                  - 'elasticloadbalancing:CreateListener'
                  - 'elasticloadbalancing:DescribeTargetHealth'
                  - 'elasticloadbalancing:RegisterTargets'
                  - 'elasticloadbalancing:DeleteListener'
                  - 'autoscaling:DescribeAutoScalingGroups'
                  - 'autoscaling:DescribeInstanceRefreshes'
                  - 'ec2:CreateLaunchTemplate'
                  - 'ec2:CreateLaunchTemplateVersion'
                  - 'ec2:DescribeLaunchTemplates'
                  - 'ec2:DescribeLaunchTemplateVersions'
                  - 'ec2:DeleteLaunchTemplate'
                  - 'ec2:DeleteLaunchTemplateVersions'
                  - 'ec2:DescribeKeyPairs'
                  - 'aws-marketplace:MeterUsage' # billing
                  - 'ec2:DescribeAvailabilityZones' #import cluster action
                  - 'ec2:DescribeRegions' #import cluster action
                  - 'eks:DescribeNodegroup' #import cluster action
                  - 'eks:DescribeCluster' #import cluster action
                  - 'eks:ListClusters' #import cluster action
                  - 'eks:DescribeClusterVersions' #import cluster action
                  - 'sts:GetCallerIdentity'
                  - 'servicequotas:ListServiceQuotas'
                  - 'iam:ListRoles'
                Resource: '*'
              - Effect: Allow
                Action:
                  - 'iam:ListOpenIDConnectProviders'
                  - 'iam:ListPolicies'
                Resource: '*'
              - Effect: Allow
                Action:
                  - 'iam:UpdateRole'
                Resource: 'arn:*:iam::*:role/Ace*'
              - Effect: Allow
                Action:
                  - 'ec2:TerminateInstances'
                Resource: 'arn:*:ec2:*:*:instance/i-*'
              - Effect: Allow
                Action:
                  - 'eks:*'
                Resource:
                  - 'arn:aws:eks:*:*:cluster/*'
                  - 'arn:aws:eks:*:*:nodegroup/*'
                  - 'arn:aws:eks:*:*:addon/*'
                  - 'arn:aws:eks:*:*:fargateprofile/*'
                  - 'arn:aws:eks:*:*:identityproviderconfig/*'
                  - 'arn:aws:eks:*:*:eks-anywhere-subscription/*'
                  - 'arn:aws:eks:*:*:podidentityassociation/*'
                  - 'arn:aws:eks:*:*:access-entry/*'
                  - 'arn:aws:eks:*:aws:cluster-access-policy/*'
              - Effect: Allow
                Action:
                  - 'autoscaling:CreateAutoScalingGroup'
                  - 'autoscaling:UpdateAutoScalingGroup'
                  - 'autoscaling:CreateOrUpdateTags'
                  - 'autoscaling:StartInstanceRefresh'
                  - 'autoscaling:DeleteAutoScalingGroup'
                  - 'autoscaling:DeleteTags'
                Resource: 'arn:*:autoscaling:*:*:autoScalingGroup:*:autoScalingGroupName/*'
              - Effect: Allow
                Action:
                  - 'iam:CreateServiceLinkedRole'
                Resource:
                  - 'arn:*:iam::*:role/aws-service-role/autoscaling.amazonaws.com/AWSServiceRoleForAutoScaling'
                Condition:
                  StringLike:
                    "iam:AWSServiceName": "elasticloadbalancing.amazonaws.com"
              - Effect: Allow
                Action:
                  - 'iam:CreateServiceLinkedRole'
                Resource:
                  - 'arn:*:iam::*:role/aws-service-role/elasticloadbalancing.amazonaws.com/AWSServiceRoleForElasticLoadBalancing'
                Condition:
                  StringLike:
                    "iam:AWSServiceName": "elasticloadbalancing.amazonaws.com"
              - Effect: Allow
                Action:
                  - 'iam:CreateServiceLinkedRole'
                Resource:
                  - 'arn:*:iam::*:role/aws-service-role/spot.amazonaws.com/AWSServiceRoleForEC2Spot'
                Condition:
                  StringLike:
                    "iam:AWSServiceName": "spot.amazonaws.com"
              - Effect: Allow
                Action:
                  - 'iam:PassRole'
                Resource:
                  - 'arn:*:iam::*:role/*.cluster-api-provider-aws.sigs.k8s.io'
                  - 'arn:*:iam::*:role/Ace*'
                  - 'arn:*:iam::*:role/controllers*'
                  - 'arn:*:iam::*:role/nodes*'
                  - 'arn:*:iam::*:role/control-plane*'
                  - 'arn:*:iam::*:role/controlplane*'
              - Effect: Allow
                Action:
                  - 'secretsmanager:CreateSecret'
                  - 'secretsmanager:DeleteSecret'
                  - 'secretsmanager:TagResource'
                Resource:
                  - 'arn:*:secretsmanager:*:*:secret:aws.cluster.x-k8s.io/*'
              - Effect: Allow
                Action:
                  - 's3:CreateBucket'
                  - 's3:ListBucket'
                  - 's3:PutBucketCORS'
                  - 's3:DeleteBucket'
                  - 's3:GetBucketLocation'
                  - 's3:PutObject'
                  - 's3:GetObject'
                  - 's3:DeleteObject'
                  - 's3:PutBucketOwnershipControls'
                Resource:
                  - 'arn:*:s3:::*'
              - Effect: Allow
                Action:
                  - 'cloudformation:*'
                Resource:
                  - 'arn:*:cloudformation:*:*:stack/*'
              - Effect: Allow
                Action:
                  - 'iam:CreateInstanceProfile' #instance-profiles
                  - 'iam:DeleteInstanceProfile'
                  - 'iam:GetInstanceProfile'
                  - 'iam:RemoveRoleFromInstanceProfile'
                  - 'iam:AddRoleToInstanceProfile'
                Resource:
                  - 'arn:*:iam::*:instance-profile/*'
              - Effect: Allow
                Action:
                  - 'iam:GetRole'
                  - 'iam:ListAttachedRolePolicies'
                Resource:
                  - 'arn:*:iam::*:role/*'
              - Effect: Allow
                Action:
                  - 'iam:CreateRole'
                  - 'iam:DeleteRole'
                  - 'iam:AttachRolePolicy'
                  - 'iam:PutRolePolicy'
                  - 'iam:UpdateAssumeRolePolicy'
                  - 'iam:ListInstanceProfilesForRole'
                  - 'iam:DetachRolePolicy'
                  - 'iam:DeleteRolePolicy'
                  - 'iam:GetRolePolicy'
                  - 'iam:TagRole'
                  - 'iam:UntagRole'
                Resource:
                  - 'arn:*:iam::*:role/Ace*'
                  - 'arn:*:iam::*:role/controllers*'
                  - 'arn:*:iam::*:role/nodes*'
                  - 'arn:*:iam::*:role/control-plane*'
                  - 'arn:*:iam::*:role/controlplane*'
              - Effect: Allow
                Action:
                  - 'iam:GetPolicy' #policy
                  - 'iam:CreatePolicy'
                  - 'iam:DeletePolicy'
                  - 'iam:ListPolicyVersions'
                Resource:
                  - 'arn:*:iam::*:policy/Ace*'
                  - 'arn:*:iam::*:policy/controllers*'
                  - 'arn:*:iam::*:policy/nodes*'
                  - 'arn:*:iam::*:policy/control-plane*'
                  - 'arn:*:iam::*:policy/csi*'
              - Effect: Allow
                Action:
                  - 'iam:ListOpenIDConnectProviderTags' #openidconnect
                  - 'iam:GetOpenIDConnectProvider'
                  - 'iam:CreateOpenIDConnectProvider'
                  - 'iam:DeleteOpenIDConnectProvider'
                  - 'iam:TagOpenIDConnectProvider'
                  - 'iam:UntagOpenIDConnectProvider'
                  - 'iam:UpdateOpenIDConnectProviderThumbprint'
                Resource:
                  - 'arn:*:iam::*:oidc-provider/*'
  MeterUsageInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - Ref: InstanceProfileRole
  Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyPair
      Tags:
        - Key: "Name"
          Value:
            Ref: AWS::StackName
      IamInstanceProfile: !Ref MeterUsageInstanceProfile
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          SubnetId:
            Ref: "Subnet"
      BlockDeviceMappings:
        - DeviceName: /dev/xvda #/dev/sta1 root volume for ubuntu, /dev/xvda for amzn-linux
          Ebs:
            VolumeSize: 100 # Specify the size of the root volume in GB
            VolumeType: gp3
      UserData:
        Fn::Base64:
          !Join
            - "\n"
            - - |
                #!/bin/bash
                sudo su
                HOME="/root"
                cd $HOME
                apt-get -y update
                apt upgrade -y
                set -xeo pipefail
                exec >/root/userdata.log 2>&1
              - !Sub 'PUBLIC_IP=${ElasticIP.PublicIp}'
              - !Sub 'REGION=${AWS::Region}'
              - !Sub 'DOMAIN_WHITELIST=${DomainWhiteList}'
              - |
                #constants (don't touch)
                BUCKET_NAME="ace"
                ADMIN_USER_NAME="admin"
                ADMIN_USER_PASSWORD=""
                timestamp() {
                  date +"%Y/%m/%d %T"
                }
                log() {
                  local type="$1"
                  local msg="$2"
                  local script_name=${0##*/}
                  echo "$(timestamp) [$script_name] [$type] $msg"
                }
                retry() {
                  local retries="$1"
                  shift
                  local count=0
                  local wait=5
                  until "$@"; do
                  exit="$?"
                  if [ $count -lt $retries ]; then
                    log "INFO" "Attempt $count/$retries. Command exited with exit_code: $exit. Retrying after $wait seconds..."
                    sleep $wait
                  else
                    log "INFO" "Command failed in all $retries attempts with exit_code: $exit. Stopping trying any further...."
                    return $exit
                  fi
                    count=$(($count + 1))
                  done
                  return 0
                }
                update_welcome_message() {
                  echo 'See "/etc/appscode/login.txt" to get ACE system admin credentials, use this credential to login into the system as admin' >> /etc/motd
                }
                generate_credentials() {
                  # Define character sets
                  LOWER=$(head /dev/urandom | tr -dc 'a-z' | head -c 4)
                  UPPER=$(head /dev/urandom | tr -dc 'A-Z' | head -c 3)
                  NUMBERS=$(head /dev/urandom | tr -dc '0-9' | head -c 3)
                  SPECIAL=$(head /dev/urandom | tr -dc '!@#$%^&*()_+-=[]{}|;:,.<>?' | head -c 4)
                  # Combine all sets
                  ALL="$LOWER$UPPER$NUMBERS$SPECIAL"
                  # Shuffle the combined characters
                  ADMIN_USER_PASSWORD=$(echo "$ALL" | fold -w1 | shuf | tr -d '\n')
                  mkdir /etc/appscode
                  echo 'Visit URL: https://'$PUBLIC_IP >> /etc/appscode/login.txt
                  echo 'Username: admin' >> /etc/appscode/login.txt
                  echo 'Password: '$ADMIN_USER_PASSWORD >> /etc/appscode/login.txt
                }
                create_k3s() {
                  echo 'fs.inotify.max_user_instances=100000' | sudo tee -a /etc/sysctl.conf
                  echo 'fs.inotify.max_user_watches=100000' | sudo tee -a /etc/sysctl.conf
                  sudo sysctl -p
                  # Create k3s cluster
                  SERVER_IP=${PUBLIC_IP}
                  #selinux policy resolve. ref: https://github.com/k3s-io/k3s/issues/10411#issuecomment-2231879747
                  amazon-linux-extras enable selinux-ng; sudo yum install selinux-policy-targeted -y
                  cmd="curl -sfL https://get.k3s.io"
                  retry 5 $cmd | INSTALL_K3S_EXEC="--disable=traefik --disable=metrics-server" sh -s - --tls-san "$SERVER_IP"
                  echo 'alias k=kubectl' >> ${HOME}/.bashrc
                  export KUBECONFIG=/etc/rancher/k3s/k3s.yaml
                  # wait for 2 pods to become running
                  cmd="kubectl wait --for=condition=ready pods --all -A --timeout=5m"
                  retry 5 $cmd
                  # Install helm
                  curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
                }
                aws_cli() {
                  BUCKET_NAME=${BUCKET_NAME}$(head /dev/urandom | tr -dc 'a-z' | head -c 6)
                  echo "s3 bucket name: "${BUCKET_NAME}
                  # install jq
                  yum install jq -y
                  # aws s3api create-bucket --bucket ${BUCKET_NAME} --region ${REGION} --object-ownership BucketOwnerEnforced
                  aws s3api create-bucket --bucket ${BUCKET_NAME} --region ${REGION}
                  ACCOUNT_ID=$(aws sts get-caller-identity | jq -r '.Account')
                  CLUSTER_ID=$(kubectl get ns kube-system -o=jsonpath='{.metadata.uid}')
                  UTC_TIME=$(date -u +"%Y-%m-%dT%H:%M:%S.%NZ")
                  #call the webhook here
                  resp=$(curl -X POST https://appscode.com/marketplace/api/v1/marketplaces/aws/notification/resource \
                    -H "Content-Type: application/json" \
                    -d '{
                          "eventType": "BIND",
                          "eventTime": "'${UTC_TIME}'",
                          "bindingInfo": {
                            "marketplace": "Aws",
                            "accountId": "'${ACCOUNT_ID}'",
                            "clusterId": "'${CLUSTER_ID}'",
                            "adminUsername": "'${ADMIN_USER_NAME}'",
                            "adminPassword": "'${ADMIN_USER_PASSWORD}'",
                            "domainWhitelist": ["'${DOMAIN_WHITELIST}'"],
                            "options": {
                              "infra": {
                                "dns": {
                                  "provider": "none",
                                  "targetIPs": ["'${PUBLIC_IP}'"]
                                },
                                "cloudServices": {
                                  "objstore": {
                                    "auth": {
                                      "s3": {
                                        "AWS_ACCESS_KEY_ID": "'${AWS_ACCESS_KEY_ID}'",
                                        "AWS_SECRET_ACCESS_KEY": "'${AWS_SECRET_ACCESS_KEY}'"
                                      }
                                    },
                                    "bucket": "s3://'${BUCKET_NAME}'?s3ForcePathStyle=true",
                                    "endpoint": "s3.amazonaws.com",
                                    "prefix": "ace",
                                    "region": "'${REGION}'"
                                  },
                                  "provider": "s3"
                                },
                                "kubestash": {
                                  "backend": {
                                    "provider": "s3",
                                    "s3": {
                                      "bucket": "s3://'${BUCKET_NAME}'",
                                      "endpoint": "s3.amazonaws.com",
                                      "prefix": "ace",
                                      "region": "'${REGION}'"
                                    }
                                  },
                                  "retentionPolicy": "keep-1mo",
                                  "schedule": "0 */2 * * *",
                                  "storageSecret": {
                                    "create": true
                                  }
                                }
                              },
                              "initialSetup": {
                                "cluster": {
                                  "region": "'${REGION}'"
                                },
                                "subscription": {
                                  "aws": {
                                    "customer-identifier": "demo-customer-identifier"
                                  }
                                }
                              }
                            }
                          }
                        }')
                    link=$(echo ${resp} | jq -r '.link')
                    if [ ${link} == "null" ]; then   exit 1 ; fi
                    mkdir new
                    cd new
                    curl -L "${link}" -o "archive.tar.gz"
                    tar -xvzf archive.tar.gz

                    #soruce azure credential file from archive.tar.gz
                    source env.sh
                    cd ..
                }
                install_fluxcd() {
                  helm upgrade -i flux2 \
                  oci://ghcr.io/appscode-charts/flux2 \
                  --version ${FLUXCD_CHART_VERSION} \
                  --namespace flux-system --create-namespace \
                  --set helmController.create=true \
                  --set sourceController.create=true \
                  --set imageAutomationController.create=false \
                  --set imageReflectionController.create=false \
                  --set kustomizeController.create=true \
                  --set notificationController.create=true \
                  --set-string helmController.labels."ace\.appscode\.com/managed=true" \
                  --set-string sourceController.labels."ace\.appscode\.com/managed=true" \
                  --set-string kustomizeController.labels."ace\.appscode\.com/managed=true" \
                  --set-string notificationController.labels."ace\.appscode\.com/managed=true" \
                  --set cli.image=ghcr.io/appscode/flux-cli \
                  --wait --debug --burst-limit=10000
                }
                deploy_ace(){
                  helm upgrade -i ace-installer \
                  oci://ghcr.io/appscode-charts/ace-installer \
                  --version ${ACE_INSTALLER_CHART_VERSION} \
                  --namespace kubeops --create-namespace \
                  --values=./new/values.yaml \
                  --wait --debug --burst-limit=10000
                }
                init(){
                  generate_credentials
                  create_k3s
                  aws_cli
                  install_fluxcd
                  deploy_ace
                  update_welcome_message
                }
                init

  IPAssoc:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref Instance
      EIP: !GetAtt ElasticIP.PublicIp

Outputs:
  SiteURL:
    Description: Click the following URL to explore the site. Please note that it may take approximately 15 minutes for the application to be ready after the instance is created.
    Value: !Join [ "", [ "https://", !GetAtt ElasticIP.PublicIp ] ]
  ApplicationCredentials:
    Description: System Admin credentials
    Value: For Admin credentials ssh into the EC2 instance, and see the /etc/appscode/login.txt file
